finish resizable left panel

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -453,9 +453,8 @@ body {overflow-x:hidden; }
 .SidePane > #annoCollec svg.score1 { border-radius:50%; background-color:rgba(17, 173, 17, 0.3);border:1px solid rgba(36, 106, 36, 0.4);}
 
 .SidePane { position:absolute;transition:left 400ms ease-in-out,right 400ms ease-in-out; background:white;height:100vh; position:fixed;padding:20px;
-   background:rgba(246,246,246,1); z-index:100; top:0 
-}
-.SidePane.left {  box-shadow:2px 0 2px 0px rgba(0,0,0,0.35);}
+   background:rgba(246,246,246,1); z-index:100; top:0; }
+.SidePane.left {  box-shadow:2px 0 2px 0px rgba(0,0,0,0.35); left:-500px;}
 .SidePane.left.visible { left:0; overflow-y:auto;}
 .SidePane.right { right:-500px; box-shadow:-2px 0 2px 0px rgba(0,0,0,0.35);}
 .SidePane.right.visible { right:0; overflow-y:auto;}
@@ -464,14 +463,14 @@ body {overflow-x:hidden; }
 .datatypesLoader, .facetLoader { left:0px !important;top:0 !important;}
 
 #resizableLeftPane { position:fixed; z-index:10; } 
-#resizableLeftPane .SidePane { position:relative; overflow-x:hidden;}
+#resizableLeftPane .SidePane { position:relative; overflow-x:hidden;} 
 
 .react-resizable-handle {
    position: absolute;
-   width: 10px;
+   width: 15px;
    height: 100%;
    bottom: 0;
-   right: -5px;
+   right: -10px;
    box-sizing: border-box;
    cursor: e-resize;
    z-index:101;
@@ -521,6 +520,18 @@ body {overflow-x:hidden; }
 .searchWidget .subcollapse.open { width:auto; max-width:350px; }
 .searchWidget > label + .subcollapse { width:auto !important; }
 .searchWidget > label { margin-right:5px;}
+
+
+.widget > label { display:inline; padding-left:3px;padding-bottom:2px;  }
+.widget > label > * { display:inline; vertical-align: middle; }
+.widget > label > .checkbox { display:inline-block; width:18px !important;height:18px !important; }
+.widget > label > .checkbox > span:first-child { display:inline;  }
+.widget > label > span:last-child:nth-child(2) { vertical-align:1px; line-height:21px;}
+.widget { padding-left:18px;} 
+.widget > label > .checkbox { left:-18px;} 
+.widget > label > span:last-child:nth-child(2) { margin-left:-18px;}
+.widget > .subcollapse { padding-left:0 !important;}
+
 
 span.subcollapse { opacity:0; transition:opacity 50ms ease-in-out ; }
 span.subcollapse svg { vertical-align:-6px; cursor:pointer; font-size:18px; }
@@ -644,7 +655,7 @@ h2 + .browse a { font-size:14px; text-transform:capitalize;}
 {
    body { min-width:1400px; overflow:auto;}
    .SearchPane { transition:all 400ms ease-in-out;}
-   .SidePane.visible + .SearchPane { padding-left:500px; }
+   .SidePane.visible + .SearchPane { padding-left:300px; }
    .SidePane.visible + .SearchPane .mainloader { padding-left:200px; }
 }
 
