--- a/src/components/App.css
+++ b/src/components/App.css
@@ -64,6 +64,8 @@ a.result button { text-transform:none; padding-bottom:0;}
 
 .sameAsLogo { color:black; font-weight:bold; background-color:#eee;border:1px solid #aaa;font-size:10px;align-items: center; padding-top:0px;padding:0px 2px;  line-height:20px; }
 
+.source-data { vertical-align:middle; }
+
 .source-data,
 .source-data a { display:inline-block; position:relative; }
 .source-data span { width:0;height:0;display:inline-block;position:absolute;background:transparent;
