--- a/src/components/App.css
+++ b/src/components/App.css
@@ -292,6 +292,7 @@ h4:hover .hoverlink { opacity:1;pointer-events: auto;}
 .sameAs.mbbt .before { background-image:url("/MB-icon.jpg"); background-position:top 1px right 6px;} 
 .sameAs.ola .before { background-image:url("/OL.png"); }
 .sameAs.viaf .before { background-image:url("/VIAF.png"); }
+.sameAs.eftr .before { background-image:url("/84000.svg"); background-size:16px auto; background-position:top 4px left 0px;}
 .sameAs.rkts .before { background-image:url("/RKTS.png"); background-position:top 2px left 2px; }
 .sameAs.wd .before { background-image:url("/WD.svg");  background-size:18px auto; background-position:top 2px left 2px;}
 
@@ -304,6 +305,7 @@ h4:hover .hoverlink { opacity:1;pointer-events: auto;}
 .provider.mbbt .before { background-image:url("/MB-icon.jpg"); background-position:top 1px right 6px;} 
 .provider.ola .before { background-image:url("/OL.png"); }
 .provider.viaf .before { background-image:url("/VIAF.png"); }
+.provider.eftr .before { background-image:url("/84000.svg");  background-size:16px auto; background-position:top 4px left 0px;}
 .provider.wd .before { background-image:url("/WD.svg");  background-size:18px auto; background-position:top 2px left 2px;}
 .provider.rkts .before { background-image:url("/RKTS.png"); }
 
@@ -324,6 +326,7 @@ h4.hasIcon ~ .subsub { padding-left:40px; }
 .uriTooltip .logo.ola  { background-image:url("/OL.png"); }
 .uriTooltip .logo.viaf  { background-image:url("/VIAF.png"); }
 .uriTooltip .logo.wd  { background-image:url("/WD.svg"); }
+.uriTooltip .logo.eftr  { background-image:url("/84000.svg"); background-size: 52px auto; }
 .uriTooltip .logo.rkts  { background-image:url("/RKTS.png");background-size: 52px auto; }
 
 .uriTooltip .logo, .uriTooltip .text { margin-top:30px;}
