fixes for 840000 data display

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -307,7 +307,7 @@ h4:hover .hoverlink { opacity:1;pointer-events: auto;}
 .provider.viaf .before { background-image:url("/VIAF.png"); }
 .provider.eftr .before { background-image:url("/84000.svg");  background-size:16px auto; background-position:top 4px left 0px;}
 .provider.wd .before { background-image:url("/WD.svg");  background-size:18px auto; background-position:top 2px left 2px;}
-.provider.rkts .before { background-image:url("/RKTS.png"); }
+.provider.rkts .before { background-image:url("/RKTS.png"); background-size: 15px auto; }
 
 h4.sameAs .ulink.sameAs { margin-left:-21px; } 
 
