--- a/src/components/App.css
+++ b/src/components/App.css
@@ -257,10 +257,11 @@ a.login { text-decoration:underline; cursor:pointer; }
 
 .urilink { position:relative; }
 /*h4:not(.sameAs)*/ .urilink.hasIcon, h4.hasIcon { padding-left:0px; }
-/*h4:not(.sameAs)*/ .ulink.hasIcon .before, h4.hasIcon .before
+/*h4:not(.sameAs)*/ .ulink.hasIcon .before, h4.hasIcon .before, h2 .before
 { content:''; position:relative;display:inline-block;width:13px;height:13px; background-color:white;  vertical-align: -4px;padding-right:8px; padding-bottom:3px;
    background-position:right 5px center;background-size:13px auto;background-repeat:no-repeat; 
 }
+h2 .before { height:16px; }
 .before a {font-size:0; position:absolute;width:100%;height:100%;}
 .before:hover a { border:none !important; }
 
@@ -283,18 +284,31 @@ h4:hover .hoverlink { opacity:1;pointer-events: auto;}
 .hover-anchor ~ .hover-anchor { display:none; }
 :not(.lang) + .hover-anchor .hoverlink { margin-left:5px;}
 
-.sameAs.bdr    > .before { background-image:url("/logo.svg"); background-size:17px auto; background-position:top 1px right 5px; }
-.sameAs.bnf    > .before { background-image:url("/BNF.svg"); background-size:19px auto;background-position:top 4px left;}
-.sameAs.dila   > .before { background-image:url("/DILA-favicon.ico"); background-position:top 1px right 5px;}
-.sameAs.eap    > .before { background-image:url("/BL.gif"); background-size:auto 13px; background-position:left 4px top; }
-.sameAs.gretil > .before { background-image:url("/GRETIL.png"); background-size:auto 13px; background-position:top 1px right 6px;}
-.sameAs.ia     > .before { background-image:url("/IA.png"); background-size:auto 13px;background-position:top 0px left 2px;}
-.sameAs.mbbt   > .before { background-image:url("/MB-icon.jpg"); background-position:top 1px right 6px;} 
-.sameAs.ola    > .before { background-image:url("/OL.png"); }
-.sameAs.viaf   > .before { background-image:url("/VIAF.png"); }
-.sameAs.eftr   > .before { background-image:url("/84000.svg"); background-size:16px auto; background-position:top 4px left 0px;}
-.sameAs.rkts   > .before { background-image:url("/RKTS.png"); background-position:top 2px left 2px; }
-.sameAs.wd     > .before { background-image:url("/WD.svg");  background-size:18px auto; background-position:top 2px left 2px;}
+h2 .bdr .before { background-image:url("/logo.svg"); background-size:17px auto; background-position:top 1px right 5px; }
+h2 .bnf .before { background-image:url("/BNF.svg"); background-size:19px auto;background-position:top 4px left;}
+h2 .dila .before { background-image:url("/DILA-favicon.ico"); background-position:top 1px right 5px;}
+h2 .eap .before { background-image:url("/BL.gif"); background-size:auto 13px; background-position:left 4px top; }
+h2 .gretil .before { background-image:url("/GRETIL.png"); background-size:auto 13px; background-position:top 1px right 6px;}
+h2 .ia .before { background-image:url("/IA.png"); background-size:auto 13px;background-position:top 0px left 2px;}
+h2 .mbbt .before { background-image:url("/MB-icon.jpg"); background-position:top 1px right 6px;} 
+h2 .ola .before { background-image:url("/OL.png"); }
+h2 .viaf .before { background-image:url("/VIAF.png"); }
+h2 .eftr .before { background-image:url("/84000.svg"); background-size:16px auto; background-position:top 4px left 0px;}
+h2 .rkts .before { background-image:url("/RKTS.png"); background-position:top 2px left 2px; }
+h2 .wd .before { background-image:url("/WD.svg");  background-size:18px auto; background-position:top 2px left 2px;}
+
+.sameAs.bdr:not(.ulink):not(h4) .before, h4 .bdr .before { background-image:url("/logo.svg"); background-size:17px auto; background-position:top 1px right 5px; }
+.sameAs.bnf:not(.ulink):not(h4) .before, h4 .bnf .before { background-image:url("/BNF.svg"); background-size:19px auto;background-position:top 4px left;}
+.sameAs.dila:not(.ulink):not(h4) .before, h4 .dila .before { background-image:url("/DILA-favicon.ico"); background-position:top 1px right 5px;}
+.sameAs.eap:not(.ulink):not(h4) .before, h4 .eap .before { background-image:url("/BL.gif"); background-size:auto 13px; background-position:left 4px top; }
+.sameAs.gretil:not(.ulink):not(h4) .before, h4 .gretil .before { background-image:url("/GRETIL.png"); background-size:auto 13px; background-position:top 1px right 6px;}
+.sameAs.ia:not(.ulink):not(h4) .before, h4 .ia .before { background-image:url("/IA.png"); background-size:auto 13px;background-position:top 0px left 2px;}
+.sameAs.mbbt:not(.ulink):not(h4) .before, h4 .mbbt .before { background-image:url("/MB-icon.jpg"); background-position:top 1px right 6px;} 
+.sameAs.ola:not(.ulink):not(h4) .before, h4 .ola .before { background-image:url("/OL.png"); }
+.sameAs.viaf:not(.ulink):not(h4) .before, h4 .viaf .before { background-image:url("/VIAF.png"); }
+.sameAs.eftr:not(.ulink):not(h4) .before, h4 .eftr .before { background-image:url("/84000.svg"); background-size:16px auto; background-position:top 4px left 0px;}
+.sameAs.rkts:not(.ulink):not(h4) .before, h4 .rkts .before { background-image:url("/RKTS.png"); background-position:top 2px left 2px; }
+.sameAs.wd:not(.ulink):not(h4) .before, h4 .wd .before { background-image:url("/WD.svg");  background-size:18px auto; background-position:top 2px left 2px;}
 
 .provider.bdr .before { background-image:url("/logo.svg"); background-size:17px auto; background-position:top 1px right 5px; }
 .provider.bnf .before { background-image:url("/BNF.svg"); background-size:19px auto;background-position:top 4px left;}
