--- a/src/components/App.css
+++ b/src/components/App.css
@@ -297,6 +297,10 @@ h2 .eftr .before { background-image:url("/84000.svg"); background-size:16px auto
 h2 .rkts .before { background-image:url("/RKTS.png"); background-position:top 2px left 2px; }
 h2 .wd .before { background-image:url("/WD.svg");  background-size:18px auto; background-position:top 2px left 2px;}
 
+
+.sameAs.generic:not(.ulink):not(h4) .before, h4 .generic .before { background-image:linear-gradient(rgba(0,0,0,0.25),rgba(0,0,0,0.25));
+   background-size:15px 15px; background-position:right 4px top; }
+
 .sameAs.bdr:not(.ulink):not(h4) .before, h4 .bdr .before { background-image:url("/logo.svg"); background-size:17px auto; background-position:top 1px right 5px; }
 .sameAs.bnf:not(.ulink):not(h4) .before, h4 .bnf .before { background-image:url("/BNF.svg"); background-size:19px auto;background-position:top 4px left;}
 .sameAs.dila:not(.ulink):not(h4) .before, h4 .dila .before { background-image:url("/DILA-favicon.ico"); background-position:top 1px right 5px;}
