--- a/src/components/App.css
+++ b/src/components/App.css
@@ -436,7 +436,16 @@ h3 .expand svg { position:absolute; margin-top:-18px; }*/
 /* .resource .SidePane .data .subsub.new label + div { margin-top:0; } */
 
 .resource.user h2 + .browse { display:none; }
-.resource.user h2 img { vertical-align:middle;display:inline-block; margin-right:10px; }
+.resource.user h2 img { vertical-align:middle;display:inline-block;  }
+.resource.user #avatar { position:relative; display:inline-block; margin-right:10px; width:80px; height:80px; overflow:hidden;display:inline-flex;vertical-align: middle;
+   justify-content: center;align-items: center; }
+.resource.user #avatar .hover { position: absolute;background:rgba(0,0,0,0.25); width:100%;height:35%;bottom:0;display:flex;justify-content: center;align-items: center;
+   opacity:0; color:rgba(0,0,0,0.45);transition:all 75ms ease-in-out; }
+.resource.user #avatar:hover .hover { cursor:pointer; opacity:1; }
+
+.userPopoverContent { padding:10px; min-width:350px;} 
+.userPopoverContent > div > p:last-child { font-style: italic; }
+.userPopoverContent .buttons { position:absolute;right:0;bottom:0 }
 
 [role=menuitem].current { text-decoration:underline !important; }
 
