--- a/src/components/App.css
+++ b/src/components/App.css
@@ -437,13 +437,14 @@ h3 .expand svg { position:absolute; margin-top:-18px; }*/
 
 .resource.user h2 + .browse { display:none; }
 .resource.user h2 img { vertical-align:middle; display:inline-block;  width:80px; height:80px; object-fit:cover; object-position: center; }
-.resource.user #avatar { position:relative; display:inline-block; margin-right:10px; width:80px; height:80px; overflow:hidden;display:inline-flex;vertical-align: middle;
-   justify-content: center;align-items: center; box-shadow:0 0 5px rgba(0,0,0,0.45); }
+.resource.user #avatar { position:relative; display:inline-block; margin-right:15px; width:80px; height:80px; overflow:hidden;display:inline-flex;vertical-align: middle;
+   justify-content: center;align-items: center; box-shadow:0 0 5px rgba(0,0,0,0.45); margin-left:2px;}
 .resource.user #avatar .hover { position: absolute;background:rgba(0,0,0,0.45); width:100%;height:35%;bottom:0;display:flex;justify-content: center;align-items: center;
    opacity:0; color:rgba(255,255,255,0.35);transition:all 75ms ease-in-out; }
 .resource.user #avatar:hover .hover { cursor:pointer; opacity:1; }
 
 .userPopoverContent { padding:10px; min-width:350px;} 
+.userPopoverContent > div > label:first-child { text-transform: capitalize; }
 .userPopoverContent > div > p:last-child { font-style: italic; }
 .userPopoverContent .buttons { position:absolute;right:6px; opacity:0; color:rgba(0,0,0,0.55); transition:all 75ms ease-in-out;}
 .userPopoverContent /*.modified*/ .buttons { opacity:1;}
@@ -454,10 +455,11 @@ h3 .expand svg { position:absolute; margin-top:-18px; }*/
 .userPopoverContent .buttons a:last-child  svg { color:red; }
 
 /* .resource h3 { position:relative; } */
-.resource h3 .preprop { position:absolute; text-align:right; right:100%; top:0px; padding:5px; display:none;  width:100px;}
-.resource h3 .preprop a svg { font-size:18px; vertical-align:middle; cursor:pointer; margin-right:2px; color:rgba(0,0,0,0.55); }
-.resource h3 .preprop a { border-bottom:none !important; }
-.resource .data > div:hover > h3 .preprop { display:block; }
+.resource h3 .preprop .menu { position:absolute; text-align:right; right:100%; top:0px; padding:5px; display:none;  width:100px;}
+.resource h3 .preprop .menu a svg { font-size:18px; vertical-align:middle; cursor:pointer; margin-right:2px; color:rgba(0,0,0,0.55); }
+.resource h3 .preprop .menu a { border-bottom:none !important; }
+.resource .data > div:hover > h3 .preprop .menu { display:block; }
+.resource h3 .preprop .popover { position:relative;  }
 
 [role=menuitem].current { text-decoration:underline !important; }
 
