use userEditPolicies + add new label (WIP)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -443,6 +443,8 @@ h3 .expand svg { position:absolute; margin-top:-18px; }*/
    opacity:0; color:rgba(255,255,255,0.35);transition:all 75ms ease-in-out; }
 .resource.user #avatar:hover .hover { cursor:pointer; opacity:1; }
 
+.resource.user .data > div { margin-left:-50px; padding-left:50px; }
+
 .userPopoverContent { padding:10px; min-width:350px;} 
 .userPopoverContent > div > label:first-child { text-transform: capitalize; }
 .userPopoverContent > div > p:last-child { font-style: italic; }
@@ -457,8 +459,10 @@ h3 .expand svg { position:absolute; margin-top:-18px; }*/
 .resource.user #patch { background:#eee; border:1px solid #999; padding:20px; position:relative; margin-top:30px; overflow-x:auto; overflow-y:visible;}
 /* .resource.user #patch::before { content:'RDF Patch:'; position:absolute;left:-1px; top:-20px;display:block; } */
 
+
+
 /* .resource h3 { position:relative; } */
-.resource h3 .preprop .menu { position:absolute; text-align:right; right:100%; top:0px; padding:5px; display:none;  width:100px;}
+.resource h3 .preprop .menu { position:absolute; text-align:right; right:calc(100% - 50px); top:0px; padding:5px; display:none;  width:100px;}
 .resource h3 .preprop .menu a svg { font-size:18px; vertical-align:middle; cursor:pointer; margin-right:2px; color:rgba(0,0,0,0.55); }
 .resource h3 .preprop .menu a { border-bottom:none !important; }
 .resource .data > div:hover > h3 .preprop .menu { display:block; }
