--- a/src/components/App.css
+++ b/src/components/App.css
@@ -444,6 +444,7 @@ h3 .expand svg { position:absolute; margin-top:-18px; }*/
 .resource.user #avatar:hover .hover { cursor:pointer; opacity:1; }
 
 .resource.user .data > div h3 { margin-left:-50px; padding-left:50px; }
+.resource.user .data > div h4.multiple { margin-left:-50px; padding-left:70px; }
 
 .userPopoverContent { padding:10px; min-width:350px;} 
 .userPopoverContent > div > label:first-child { text-transform: capitalize; }
@@ -462,8 +463,8 @@ h3 .expand svg { position:absolute; margin-top:-18px; }*/
 
 
 /* .resource h3 { position:relative; } */
-.resource .preprop .menu { position:absolute; text-align:right; right:calc(100% /*- 50px*/); /*top:0px;*/ margin-top:-20px; height:26px; padding:5px; display:none;  width:60px;}
-.resource h4 + .preprop .menu { right:calc(100% /*- 50px*/ - 20px); margin-top:-26px; }
+.resource .preprop .menu { position:absolute; text-align:right; right:calc(100% /*- 50px*/); /*top:0px;*/ margin-top:-18px; height:15px; padding:3px; display:none;  width:60px;}
+.resource h4 + .preprop .menu { right:calc(100% /*- 50px*/ - 20px); margin-top:-24px; }
 .resource .preprop .menu a svg { font-size:18px; vertical-align:middle; cursor:pointer; margin-right:2px; color:rgba(0,0,0,0.55); }
 .resource .preprop .menu a { border-bottom:none !important; }
 .preprop:hover .menu,
