--- a/src/components/App.css
+++ b/src/components/App.css
@@ -618,6 +618,13 @@ body > .ol-li-lang:last-child li::before { content:'-';}
 .widget > .subcollapse { padding-left:0 !important;}
 
 
+.active-filter { background:rgba(0,0,0,0.55); padding:5px 10px; border-radius: 15px; box-shadow:3px 3px 10px rgba(0,0,0,0.35)}
+.active-filter,
+.active-filter svg { font-size: 14px; vertical-align:middle; color:rgba(255,255,255,1); }
+.active-filter svg { margin-left:5px; font-size:15px; vertical-align:-3px; cursor:pointer;}
+
+.active-filter + p { margin-top:40px; }
+
 span.subcollapse { opacity:0; transition:opacity 50ms ease-in-out ; }
 span.subcollapse svg { vertical-align:-6px; cursor:pointer; font-size:18px; }
 .collapse.open > div > div > .widget > span.subcollapse, 
