--- a/src/components/App.css
+++ b/src/components/App.css
@@ -574,6 +574,7 @@ body {overflow-x:hidden; }
 .searchWidget > label > span,
 .dataWidget label > span { font-size:13px; }
 .searchWidget > label > span svg { width:16px; height:16px; } 
+.searchWidget > label > span svg.excl { width:12px;height:12px;vertical-align:-2px;}
 .dataWidget > label > span svg { width:17px; height:17px; }
 .searchWidget > label > span:first-child,
 .dataWidget > label > span:first-child { width:22px;height:22px; color:rgba(0,0,0,0.7); margin-left:9px;margin-right:2px; }
@@ -606,8 +607,12 @@ body > .ol-li-lang:last-child li::before { content:'-';}
 .searchWidget > label + .subcollapse { width:auto !important; }
 .searchWidget > label { margin-right:5px;}
 
+.searchWidget { position:relative;}
+.searchWidget > .exclude { position:absolute;margin-left:-20px;margin-top:3px; display:none; z-index:1;top:0;left:0;width:16px;padding-left:3px;}
+.searchWidget > .exclude svg, svg.excl { font-size:12px; color:white;background-color:rgba(229, 74, 53,1);border-radius:2px; cursor:pointer;}
+.exclude:hover, .searchWidget > label:hover + .exclude { display:inline-block;}
 
-.widget > label { display:inline; padding-left:3px;padding-bottom:2px;  }
+.widget > label { display:inline; padding-left:3px;padding-bottom:2px; z-index:0 }
 .widget > label > * { display:inline; vertical-align: middle; }
 .widget > label > .checkbox { display:inline-block; width:18px !important;height:18px !important; }
 .widget > label > .checkbox > span:first-child { display:inline;  }
@@ -615,14 +620,14 @@ body > .ol-li-lang:last-child li::before { content:'-';}
 .widget { padding-left:18px;} 
 .widget > label > .checkbox { left:-18px;} 
 .widget > label > span:last-child:nth-child(2) { margin-left:-18px;}
-.widget > .subcollapse { padding-left:0 !important;}
+.widget > .subcollapse { padding-left:18px !important;margin-left:-18px;}
 
 
 .active-filter { background:rgba(0,0,0,0.55); padding:5px 5px 5px 15px; border-radius: 15px; box-shadow:3px 3px 10px rgba(0,0,0,0.35); white-space: nowrap; text-transform:capitalize;
    margin:0 2px;}
 .active-filter,
 .active-filter svg { font-size: 14px; vertical-align:middle; color:rgba(255,255,255,1); }
-.active-filter svg { margin-left:5px; font-size:18px; vertical-align:-4px; cursor:pointer;}
+.active-filter svg { margin-left:10px; font-size:18px; vertical-align:-4px; cursor:pointer;}
 
 #filters-UI { margin-bottom:40px; line-height:32px; }
 
