--- a/src/components/App.css
+++ b/src/components/App.css
@@ -628,6 +628,7 @@ body > .ol-li-lang:last-child li::before { content:'-';}
 .active-filter,
 .active-filter svg { font-size: 14px; vertical-align:middle; color:rgba(255,255,255,1); }
 .active-filter svg { margin-left:10px; font-size:18px; vertical-align:-4px; cursor:pointer;}
+.active-filter.exclu { background:rgba(229, 74, 53,0.65); text-decoration:line-through;text-decoration-color:rgba(229, 74, 53,1); }
 
 #filters-UI { margin-bottom:40px; line-height:32px; }
 
