--- a/src/components/App.css
+++ b/src/components/App.css
@@ -622,15 +622,16 @@ body > .ol-li-lang:last-child li::before { content:'-';}
 .widget > label > span:last-child:nth-child(2) { margin-left:-18px;}
 .widget > .subcollapse { padding-left:18px !important;margin-left:-18px;}
 
-
-.active-filter { background:rgba(0,0,0,0.55); padding:5px 5px 5px 15px; border-radius: 15px; box-shadow:3px 3px 10px rgba(0,0,0,0.35); white-space: nowrap; text-transform:capitalize;
-   margin:0 2px;}
+.active-filter span { display:inline-block; padding-left:5px;}
+.active-filter { background:rgba(0,0,0,0.55); padding:5px; border-radius: 15px; box-shadow:3px 3px 10px rgba(0,0,0,0.35);  text-transform:capitalize;
+   margin:0 2px; display:inline-block; line-height:100%;}
 .active-filter,
 .active-filter svg { font-size: 14px; vertical-align:middle; color:rgba(255,255,255,1); }
 .active-filter svg { margin-left:10px; font-size:18px; vertical-align:-4px; cursor:pointer;}
 .active-filter.exclu { background:rgba(229, 74, 53,0.65); text-decoration:line-through;text-decoration-color:rgba(229, 74, 53,1); }
+.active-filter.exclu > span { text-decoration:line-through;text-decoration-color:rgba(229, 74, 53,1); }
 
-#filters-UI { margin-bottom:40px; line-height:32px; }
+#filters-UI { margin-bottom:40px; line-height:40px; }
 
 span.subcollapse { opacity:0; transition:opacity 50ms ease-in-out ; }
 span.subcollapse svg { vertical-align:-6px; cursor:pointer; font-size:18px; }
