--- a/src/components/App.css
+++ b/src/components/App.css
@@ -622,6 +622,8 @@ body > .ol-li-lang:last-child li::before { content:'-';}
 .widget > label > span:last-child:nth-child(2) { margin-left:-18px;}
 .widget > .subcollapse { padding-left:18px !important;margin-left:-18px;}
 
+#clear-filters { vertical-align:-5px; margin-left: 5px; cursor:pointer; }
+
 .active-filter span { display:inline-block; padding-left:5px;}
 .active-filter { background:rgba(0,0,0,0.55); padding:5px; border-radius: 15px; box-shadow:3px 3px 10px rgba(0,0,0,0.35);  text-transform:capitalize;
    margin:0 2px; display:inline-block; line-height:100%;}
