--- a/src/components/App.css
+++ b/src/components/App.css
@@ -153,6 +153,10 @@ h2:hover svg.annoticon:hover,h4:hover svg.annoticon:hover { color:rgba(0,0,0,0.6
 h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 /* h4 + h4 { margin-top:5px;}  */
 
+
+[lang$="ewts"] { text-transform:none !important; }
+
+
 .resource > h2 {   font-family: "Noto Sans", "Roboto", "Helvetica", "Arial", sans-serif; }
 
 .resource { width:100% ; padding:40px 100px; text-align:left; box-sizing: border-box;}
