--- a/src/components/App.css
+++ b/src/components/App.css
@@ -618,7 +618,7 @@ body > .ol-li-lang:last-child li::before { content:'-';}
 .searchWidget > label + .subcollapse { width:auto !important; }
 .searchWidget > label { margin-right:5px;}
 
-.searchWidget { position:relative;}
+.searchWidget { position:relative; padding-right:30px;}
 .searchWidget > .exclude { position:absolute;margin-left:-20px;margin-top:3px; display:none; z-index:1;top:0;left:0;width:16px;padding-left:3px;}
 .searchWidget > .exclude svg, svg.excl { font-size:12px; color:white;background-color:rgba(229, 74, 53,1);border-radius:2px; cursor:pointer;}
 .exclude:hover, .searchWidget > label:hover + .exclude { display:inline-block;}
