--- a/src/components/App.css
+++ b/src/components/App.css
@@ -255,6 +255,8 @@ div[role="tooltip"] > div { font-weight:bold;font-size:16px; }
 
 .person #person, .place #place { display:none;}
 
+.etext-match .uri-link { font-weight:700; }
+
 .uri-link { cursor:pointer; }
 
 .uri-link,
