--- a/src/components/App.css
+++ b/src/components/App.css
@@ -200,7 +200,11 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 
 .resource .data #etext-scroll,
 .resource .data .chunk, .etextPage { display:block; position: relative;}
-.resource .data .chunk ~ h4, .etextPage h4.page { font-size:24px;line-height:40px; /*margin-bottom:10px;*/ display:inline; }
+.resource .data .chunk ~ h4, .etextPage h4.page { display:inline; }
+.resource .data .chunk ~ h4 [lang=bo], .etextPage h4.page [lang=bo] { font-size:24px;line-height:40px; /*margin-bottom:10px;*/  }
+
+.resource .data h3.chunk { margin-bottom:15px;}
+.resource .data h3.chunk ~ .multiple { padding-left:0; }
 
 .etextPage { border-top:1px solid #999; padding-top:25px;  }
 .etextPage h4.page { display:inline-block; padding-left:0; margin-bottom:0; font-size:calc( 30 * 100vw / 2500) ;  line-height:calc( 60 * 100vw / 2500) ; 
