--- a/src/components/App.css
+++ b/src/components/App.css
@@ -680,6 +680,7 @@ span.subcollapse.off { opacity:0.5 !important; }
 
 .checkbox.disabled { opacity:0.5; }
 
+h4 span.highlight,
 h3 span.highlight,
 div.match span.highlight { border:1px solid rgba(229, 74, 53,1); padding:0px 4px ; background-color:rgba(229, 74, 53,0.15); border-radius:15px; }
 #matches div.match div.multi > span { display:block; }
