--- a/src/components/App.css
+++ b/src/components/App.css
@@ -202,15 +202,19 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource .data .chunk, .etextPage { display:block; position: relative;}
 .resource .data .chunk ~ h4, .etextPage h4.page { display:inline; }
 .resource .data .chunk ~ h4 [lang=bo], .etextPage h4.page [lang=bo] { font-size:24px;line-height:40px; /*margin-bottom:10px;*/  }
-.resource .data .chunk ~ h4 [lang=bo-x-ewts], .etextPage h4.page [lang=bo-x-ewts] { text-align:justify; display:inline-block;}
+
+/* .resource .data .chunk ~ h4 [lang=bo-x-ewts], .etextPage h4.page [lang=bo-x-ewts] { text-align:justify; display:inline-block; } */
 
 .resource .data h3.chunk { margin-bottom:15px;}
 .resource .data h3.chunk ~ .multiple { padding-left:0; }
 
 .etextPage { border-top:1px solid #999; padding-top:25px;  }
-.etextPage h4.page { display:inline-block; padding-left:0; margin-bottom:0; font-size:calc( 30 * 100vw / 2500) ;  line-height:calc( 60 * 100vw / 2500) ; 
+.etextPage h4.page  { display:inline-block; padding-left:0; margin-bottom:0;  
    white-space: nowrap;margin-right:0;
 }
+
+.etextPage h4.page  [lang=bo] { font-size:calc( 30 * 100vw / 2500) ;  line-height:calc( 60 * 100vw / 2500) ; }
+
 /* .etextPage h4.page:last-child { padding-bottom:25px; } */
 .etextPage .overpage { overflow-x: auto; }
 .etextPage.unformated  { padding-bottom:25px; }
