--- a/src/lib/mirador.css
+++ b/src/lib/mirador.css
@@ -126,9 +126,53 @@
     width:auto;
 }
 
-.mirador-container .mirador-osd-context-controls > div { display:inline-block; }
+
+.mirador-container .mirador-manipulation-controls > div {
+    position: absolute;
+    bottom: 34px;
+    width: 38px;
+}
 
 .mirador-hud { display:flex; align-items:center;justify-content:center;}
+
+.mirador-container .mirador-hud > * { 
+    /*border-left:1px solid rgba(255,255,255,0.51);*/ 
+    height:40px; 
+    display:flex; 
+    align-items: center;
+    padding:0 10px; 
+}
+.mirador-container .mirador-osd-zoom-out { 
+    border-left:1px solid rgba(255,255,255,0.51); 
+    border-right:1px solid rgba(255,255,255,0.51);
+    /* padding-left:10px;
+    margin-left:10px; 
+    height:100%; */
+}
+
+.mirador-container .mirador-osd-zoom-in { 
+    margin-left:10px;
+}
+
+.mirador-container .mirador-osd-previous,
+.mirador-container .mirador-osd-next
+{
+    border-radius: 20px;
+    border: 1.5px solid white;  /* rgba(255,255,255,0.51);*/
+    padding:0;
+    width:40px;
+    box-sizing: border-box;
+    justify-content:center;
+    margin:0 10px;
+}
+
+.mirador-container .mirador-osd-previous.first,
+.mirador-container .mirador-osd-next.last {
+    opacity: 0.51;
+    pointer-events: none;
+}
+
+.mirador-container .mirador-osd-context-controls > div { display:inline-block; }
 
 .mirador-container .mirador-osd-context-controls > div > a:first-child { margin-bottom:0; }
 
@@ -139,6 +183,32 @@
     transform:none ;
 }
 
+/*
+.mirador-container .hud-control .ui-slider, .mirador-container .ui-slider-vertical {
+    margin-left: 48px;
+    position: absolute;
+    top: -38px;
+}
+*/
+.mirador-container .mirador-osd-context-controls .hud-control.mirador-osd-rotate-right {
+    margin-bottom:5px;
+}
+.mirador-container .hud-control .ui-slider, .mirador-container .ui-slider-horizontal {
+    margin-left: 34px;
+    position: absolute;
+    top: 10px; 
+    width:100px;
+    height:5px;
+}
+.mirador-container .hud-control .ui-slider-handle .percent {
+    left: 0;
+    top: 100%;
+}
+.mirador-container .ui-slider .ui-slider-handle {
+    width: 0.7em;
+    height: 0.7em;
+    border-radius: 0.35em;
+}
 
 
 
